# deeplearning

./: .gitignore  README.md
FasTrack/: CMakeLists.txt  cleancmake.sh
FasTrack/src/: main.cpp
FasTrack/src/controllers/: detector.cpp  detector.hpp  hogwarts.cpp  hogwarts.hpp  imgSource.cpp  imgSource.hpp  parser.cpp  parser.hpp  surfer.cpp  surfer.hpp
FasTrack/src/models/: detectorResult.cpp  detectorResult.hpp  hogwartsModel.cpp  hogwartsModel.hpp
faster_cpp/: CMakeLists.txt  cleancmake.sh
faster_cpp/networks/: labels.txt
faster_cpp/src/: detector.cpp  detector.hpp  main.cpp  result.hpp  tools.hpp  tracker.hpp  trackermodel.cpp  trackermodel.hpp
poc/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.lisa  cmake_install.cmake  poc
poc/network/: cifar10_quick_iter_5000.caffemodel.h5
poc/src/: classification.cpp  main.back
rapport/: Bibliography.tex  Chapter1.tex  Chapter2.tex  DeepLearning  DeepLearning.glg  DeepLearning.glo  DeepLearning.gls  DeepLearning.glsdefs  DeepLearning.ist  DeepLearning.tex  Glossary.tex  Introduction.tex  Makefile  Resume.tex  TitlePage.tex  c1p1s1_schema.pdf_tex  c1p1s2_schema.pdf_tex  c1p2s1_neuron.pdf_tex  c1p2s1_points.pdf_tex  c2p1s1_rcnn.pdf_tex
rapport/Chap/: Chapter1.tex  Chapter2.tex  Chapter3.tex
